--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+*{box-sizing:border-box;}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,49 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ddd;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.header {
+  background-color: rgb(38, 38, 236);
+  color:#fff;
+  position:fixed;
+  height: 4em;
+  width:100%;
+}
+.header .headingTitle {
+  position:relative;
+  left:2em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.my-form{
+  position: relative;
+  top:7em;
+  left:2.5em;
+}
+.my-form .inputText {
+  position: absolute;
+  height: 2.5em;
+  border-radius: 5px;
+  width:50%;
+}
+.my-form .btn {
+  background-color:#000;
+  color:#fff;
+  position:absolute;
+  right: 4.5em;
+  height: 2em;
+  border-radius: 5px;
+}
+.my-form .btn:hover{
+  background-color:yellow;
+  color:blue;
+  position:absolute;
+  right: 4.5em;
+  height: 2em;
+  border-radius: 5px;
 }
