--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 *{box-sizing:border-box;}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family:'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    width:90%;
+
   background-color: #ddd;
+  box-sizing: border-box;
 }
 
 code {
@@ -16,9 +17,11 @@ code {
 .header {
   background-color: rgb(38, 38, 236);
   color:#fff;
+  top:0.01em;
   position:fixed;
   height: 4em;
   width:100%;
+  z-index: 1;
 }
 .header .headingTitle {
   position:relative;
@@ -34,13 +37,14 @@ code {
   position: absolute;
   height: 2.5em;
   border-radius: 5px;
-  width:50%;
+  width:55%;
+  left:11em;
 }
 .my-form .btn {
   background-color:#000;
   color:#fff;
   position:absolute;
-  right: 4.5em;
+  right: 10em;
   height: 2em;
   border-radius: 5px;
 }
@@ -51,4 +55,133 @@ code {
   right: 4.5em;
   height: 2em;
   border-radius: 5px;
+}
+.photo-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  position: relative;
+  left:5.5em;
+  grid-gap:1.5em;
+
+
+
+}
+.thumbnail {
+  position: relative;
+  top:12em;
+}
+.thumbnail >h3 {
+  font-size: 15px;
+  width:70%;
+  color:blue;
+}
+.thumbnail >img {
+  border-radius: 10px;
+}
+@media (max-width:960px) {
+
+  .my-form{
+    position: relative;
+    top:7em;
+    left:2.5em;
+  }
+  .my-form .inputText {
+    position: absolute;
+    height: 2.5em;
+    border-radius: 5px;
+    width:60%;
+    left:-0.1em;
+  }
+  .my-form .btn {
+    background-color:#000;
+    color:#fff;
+    position:absolute;
+    right: 1.5em;
+    height: 2em;
+    border-radius: 5px;
+  }
+  .my-form .btn:hover{
+    background-color:yellow;
+    color:blue;
+    position:absolute;
+    right: 4.5em;
+    height: 2em;
+    border-radius: 5px;
+  }
+  .photo-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    position: relative;
+    left:2.5em;
+    grid-gap:1.5em;
+
+
+
+  }
+  .thumbnail {
+    position: relative;
+    top:12em;
+  }
+  .thumbnail >h3 {
+    font-size: 15px;
+    width:70%;
+    color:blue;
+  }
+  .thumbnail >img {
+    border-radius: 10px;
+  }
+}
+
+@media (max-width:600px) {
+  .my-form{
+    position: relative;
+    top:7em;
+    left:2.5em;
+  }
+  .my-form .inputText {
+    position: absolute;
+    height: 2.5em;
+    border-radius: 5px;
+    width:35%;
+    left:-0.1em;
+  }
+  .my-form .btn {
+    background-color:#000;
+    color:#fff;
+    position:absolute;
+    right: 4em;
+    height: 2.7em;
+    border-radius: 5px;
+    width:35%;
+  }
+  .my-form .btn:hover{
+    background-color:yellow;
+    color:blue;
+    position:absolute;
+    right: 2em;
+    height: 2em;
+    border-radius: 5px;
+  }
+  .photo-grid {
+    display: grid;
+    grid-template-columns: 1fr  1fr;
+    position: relative;
+    left:2.5em;
+    grid-gap:1.5em;
+
+
+
+  }
+  .thumbnail {
+    position: relative;
+    top:12em;
+  }
+  .thumbnail >h3 {
+    font-size: 15px;
+    width:70%;
+    color:blue;
+  }
+  .thumbnail >img {
+    border-radius: 10px;
+  }
 }
